--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script>
+    <script src="./task-1.js" type="module"></script>
+    <script src="./task-2.js" type="module"></script>
+    <script src="./task-3.js" type="module"></script>
+    <script src="./task-4.js" type="module"></script>
+    <script src="./task-5.js" type="module"></script>
+    <script src="./task-6.js" type="module"></script>
   </body>
 </html>
